style: fix scrollbar on export

--- a/src/components/PpmMaturityCard.module.css
+++ b/src/components/PpmMaturityCard.module.css
@@ -83,7 +83,7 @@
   line-height: 1.7;
   column-count: 2;
   column-gap: 32px;
-  min-height: 205px;
+  min-height: 207px;
 }
 
 .tabContent li {
